# rustlings

basics/01-game/: Cargo.toml
basics/01-game/src/: main.rs
basics/ch2_life/src/: main.rs
basics/ch3_dvdlib_a/src/: main.rs
cli/grrs/: Cargo.toml
cli/grrs/src/: main.rs
exercises/: quiz1.rs
exercises/collections/: hashmap1.rs  hashmap2.rs  vec2.rs
exercises/enums/: enums1.rs  enums3.rs
exercises/move_semantics/: move_semantics2.rs
exercises/primitive_types/: primitive_types2.rs  primitive_types3.rs
exercises/structs/: structs3.rs
http/: Cargo.toml
http/src/: main.rs
play/: Cargo.toml  hello.py  output.txt
play/src/: main.rs
