[package]
name = "grrs-cli"
version = "0.1.0"
authors = ["Shixiang Wang <w_shixiang@163.com>"]
license = "MIT"
description = "A tool to search files"
edition = "2021"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"